Simplify build.gradle.kts